--- a/LibDialog/src/main/res/layout/mx_dialog_upgrade.xml
+++ b/LibDialog/src/main/res/layout/mx_dialog_upgrade.xml
@@ -1,24 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="30dp">
+    android:paddingBottom="@dimen/mx_dialog_size_divider_space">
 
-    <ImageView
-        android:id="@+id/upgradeImg"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:src="@drawable/mx_dialog_icon_upgrade"
-        android:tint="@color/mx_dialog_color_action" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/closeBtn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentRight="true"
+            android:padding="8dp"
+            android:src="@drawable/mx_dialog_icon_close" />
+
+        <ImageView
+            android:id="@+id/upgradeImg"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:src="@drawable/mx_dialog_icon_upgrade"
+            android:tint="@color/mx_dialog_color_action" />
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/titleTxv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="@dimen/mx_dialog_size_divider_space"
+        android:layout_marginTop="@dimen/mx_dialog_size_divider_space"
         android:text="@string/mx_dialog_upgrade_title"
         android:textColor="@color/mx_dialog_color_text"
         android:textSize="@dimen/mx_dialog_text_size_title"
@@ -28,16 +44,34 @@
         android:id="@+id/msgTxv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="@dimen/mx_dialog_size_divider_space"
+        android:layout_marginTop="@dimen/mx_dialog_size_divider_space"
+        android:layout_marginBottom="@dimen/mx_dialog_size_divider_space"
         android:text="@string/mx_dialog_upgrade_title"
         android:textColor="@color/mx_dialog_color_text"
         android:textSize="@dimen/mx_dialog_text_size_content" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/mx_dialog_size_divider_space"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:max="1000"
+        android:maxHeight="5dp"
+        android:minHeight="5dp"
+        android:progress="50"
+        android:progressDrawable="@drawable/mx_dialog_progress_background"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/actionBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="@dimen/mx_dialog_size_divider_space"
+        android:layout_marginBottom="@dimen/mx_dialog_size_divider_space"
         android:background="@drawable/mx_dialog_btn_bg_upgrade"
         android:gravity="center"
         android:paddingVertical="14dp"
