--- a/LibDialog/src/main/res/drawable/mx_dialog_btn_bg_upgrade.xml
+++ b/LibDialog/src/main/res/drawable/mx_dialog_btn_bg_upgrade.xml
@@ -2,13 +2,13 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="false">
         <shape>
-            <corners android:radius="10dp" />
+            <corners android:radius="@dimen/mx_dialog_size_card_corner_radius" />
             <solid android:color="@color/mx_dialog_color_cancel" />
         </shape>
     </item>
     <item>
         <shape>
-            <corners android:radius="10dp" />
+            <corners android:radius="@dimen/mx_dialog_size_card_corner_radius" />
             <solid android:color="@color/mx_dialog_color_action" />
         </shape>
     </item>
