--- a/LibDialog/src/main/res/layout/mx_content_loading.xml
+++ b/LibDialog/src/main/res/layout/mx_content_loading.xml
@@ -20,7 +20,7 @@
         android:id="@+id/loadingTxv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="@dimen/mx_dialog_size_divider_normal"
         android:gravity="center"
         android:minEms="5"
         android:singleLine="true"
