--- a/LibDialog/src/main/res/drawable/mx_dialog_btn_bg_upgrade.xml
+++ b/LibDialog/src/main/res/drawable/mx_dialog_btn_bg_upgrade.xml
@@ -3,13 +3,14 @@
     <item android:state_enabled="false">
         <shape>
             <corners android:radius="@dimen/mx_dialog_size_card_corner_radius" />
-            <solid android:color="@color/mx_dialog_color_cancel" />
+            <solid android:color="@color/mx_dialog_color_transparent" />
         </shape>
     </item>
     <item>
         <shape>
             <corners android:radius="@dimen/mx_dialog_size_card_corner_radius" />
-            <solid android:color="@color/mx_dialog_color_action" />
+            <solid android:color="@color/mx_dialog_color_transparent" />
+            <stroke android:width="1dp" android:color="@color/mx_dialog_color_action" />
         </shape>
     </item>
 </selector>
