--- a/LibDialog/src/main/res/layout/mx_content_tip_textview.xml
+++ b/LibDialog/src/main/res/layout/mx_content_tip_textview.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/tipScrollView"
+    android:id="@+id/mxTipScrollView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/msgTxv"
+        android:id="@+id/mxMsgTxv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:lineSpacingExtra="5dp"
