--- a/LibDialog/src/main/res/layout/mx_dialog_list_item.xml
+++ b/LibDialog/src/main/res/layout/mx_dialog_list_item.xml
@@ -9,7 +9,7 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/infoTxv"
+        android:id="@+id/mxInfoTxv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="false"
@@ -26,7 +26,7 @@
         android:textSize="@dimen/mx_dialog_text_size_content" />
 
     <ImageView
-        android:id="@+id/selectTag"
+        android:id="@+id/mxSelectTag"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_gravity="right|center_vertical"
