--- a/LibDialog/src/main/res/layout/mx_dialog_list.xml
+++ b/LibDialog/src/main/res/layout/mx_dialog_list.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/mx_dialog_color_background_root"
+    android:fitsSystemWindows="true"
     android:gravity="bottom|center_horizontal"
     android:orientation="vertical"
     android:padding="@dimen/mx_dialog_size_card_corner_radius">
