--- a/LibDialog/src/main/res/layout/mx_content_action_btn.xml
+++ b/LibDialog/src/main/res/layout/mx_content_action_btn.xml
@@ -5,8 +5,7 @@
         android:layout_width="1dp"
         android:layout_height="match_parent"
         android:layout_marginHorizontal="6dp"
-        android:background="@color/mx_dialog_color_divider"
-        android:visibility="invisible" />
+        android:background="@color/mx_dialog_color_divider" />
 
     <TextView
         android:id="@+id/actionBtn"
