--- a/LibDialog/src/main/res/layout/mx_content_action_btn.xml
+++ b/LibDialog/src/main/res/layout/mx_content_action_btn.xml
@@ -2,6 +2,7 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
     <View
+        android:id="@+id/actionDivider"
         android:layout_width="1dp"
         android:layout_height="match_parent"
         android:layout_marginHorizontal="6dp"
